zero-tolerance charset fixes
GitOrigin-RevId: 0ac0e0269912b2330a586bacf9180e786e260dc6